# icons

./: .gitignore  README.md  descriptions.json  index.json
mcp-server/: README.md  pyproject.toml
mcp-server/src/azure_icons_mcp/: __init__.py  server.py
scripts/: build_index.py
skills/azure-icons/: SKILL.md
skills/azure-icons/references/: index.json
